@@ -569,9 +569,9 @@ class pts_test_execution
 		{
 			if(is_file($test_run_request->test_profile->get_install_dir() . 'install.log'))
 			{
-				$backup_log_dir = PTS_SAVE_RESULTS_PATH . $test_run_manager->get_file_name() . '/installation-logs/' . $test_run_manager->get_results_identifier() . '/';
+				$backup_log_dir = $test_run_manager->result_file->get_test_installation_log_dir() . $test_run_manager->get_results_identifier_simplified() . '/';
 				pts_file_io::mkdir($backup_log_dir, 0777, true);
-				copy($test_run_request->test_profile->get_install_dir() . 'install.log', $backup_log_dir . basename($test_identifier) . '.log');
+				copy($test_run_request->test_profile->get_install_dir() . 'install.log', $backup_log_dir . $test_run_request->test_profile->get_identifier_simplified() . '.log');
 			}
 		}
 
